{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 1416,
  "lineage": "2d75535a-3a38-01b2-8bb3-4c3491953272",
  "resources": [
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "each": "map",
      "provider": "provider.google-beta",
      "instances": [
        {
          "index_key": "default",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/application-project-a1d0/regions/us-central1/instanceGroups/nginx-server-mig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0.8
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2020-06-29T20:41:26.721-07:00",
            "enable_cdn": false,
            "fingerprint": "Kuef-Dn--5w=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/application-project-a1d0/global/healthChecks/nginx-group-lb-hc-default"
            ],
            "id": "projects/application-project-a1d0/global/backendServices/nginx-group-lb-backend-default",
            "load_balancing_scheme": "EXTERNAL",
            "name": "nginx-group-lb-backend-default",
            "port_name": "http",
            "project": "application-project-a1d0",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/application-project-a1d0/global/backendServices/nginx-group-lb-backend-default",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "module.application_project.module.project-factory.google_project.main",
            "module.application_project.module.project-factory.module.project_services.google_project_service.project_services",
            "module.gce-lb-http.google_compute_health_check.default",
            "module.nginx_group.google_compute_region_instance_group_manager.mig"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.network-firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-admins",
      "each": "list",
      "provider": "provider.google",
      "instances": []
    },
    {
      "module": "module.network.module.network-firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "each": "list",
      "provider": "provider.google",
      "instances": []
    },
    {
      "module": "module.network.module.network-firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tag-http",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-06-29T20:14:46.141-07:00",
            "deny": [],
            "description": "Allow HTTP to machines with the 'http-server' tag",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/management-project-ee13/global/firewalls/cf-vpc-ingress-tag-http",
            "name": "cf-vpc-ingress-tag-http",
            "network": "https://www.googleapis.com/compute/v1/projects/management-project-ee13/global/networks/cf-vpc",
            "priority": 1000,
            "project": "management-project-ee13",
            "self_link": "https://www.googleapis.com/compute/v1/projects/management-project-ee13/global/firewalls/cf-vpc-ingress-tag-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.management_folder.google_folder.default",
            "module.management_project.module.project-factory.module.project-factory.google_project.main",
            "module.management_project.module.project-factory.module.project-factory.module.project_services.google_project_service.project_services",
            "module.management_project.module.project-factory.module.project-factory.null_resource.preconditions",
            "module.management_project.module.project-factory.module.project-factory.random_id.random_project_id_suffix",
            "module.network.module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.network-firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tag-https",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-06-29T20:14:46.129-07:00",
            "deny": [],
            "description": "Allow HTTPS to machines with the 'https' tag",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/management-project-ee13/global/firewalls/cf-vpc-ingress-tag-https",
            "name": "cf-vpc-ingress-tag-https",
            "network": "https://www.googleapis.com/compute/v1/projects/management-project-ee13/global/networks/cf-vpc",
            "priority": 1000,
            "project": "management-project-ee13",
            "self_link": "https://www.googleapis.com/compute/v1/projects/management-project-ee13/global/firewalls/cf-vpc-ingress-tag-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "https-server"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.management_folder.google_folder.default",
            "module.management_project.module.project-factory.module.project-factory.google_project.main",
            "module.management_project.module.project-factory.module.project-factory.module.project_services.google_project_service.project_services",
            "module.management_project.module.project-factory.module.project-factory.null_resource.preconditions",
            "module.management_project.module.project-factory.module.project-factory.random_id.random_project_id_suffix",
            "module.network.module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.network-firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tag-ssh",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-06-29T20:14:46.133-07:00",
            "deny": [],
            "description": "Allow SSH to machines with the 'ssh' tag",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/management-project-ee13/global/firewalls/cf-vpc-ingress-tag-ssh",
            "name": "cf-vpc-ingress-tag-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/management-project-ee13/global/networks/cf-vpc",
            "priority": 1000,
            "project": "management-project-ee13",
            "self_link": "https://www.googleapis.com/compute/v1/projects/management-project-ee13/global/firewalls/cf-vpc-ingress-tag-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.management_folder.google_folder.default",
            "module.management_project.module.project-factory.module.project-factory.google_project.main",
            "module.management_project.module.project-factory.module.project-factory.module.project_services.google_project_service.project_services",
            "module.management_project.module.project-factory.module.project-factory.null_resource.preconditions",
            "module.management_project.module.project-factory.module.project-factory.random_id.random_project_id_suffix",
            "module.network.module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.network-firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "custom",
      "each": "map",
      "provider": "provider.google",
      "instances": []
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-hc",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-06-29T20:44:14.047-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/management-project-ee13/global/firewalls/nginx-group-lb-hc-0",
            "name": "nginx-group-lb-hc-0",
            "network": "https://www.googleapis.com/compute/v1/projects/management-project-ee13/global/networks/cf-vpc",
            "priority": 1000,
            "project": "management-project-ee13",
            "self_link": "https://www.googleapis.com/compute/v1/projects/management-project-ee13/global/firewalls/nginx-group-lb-hc-0",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.application_project.module.project-factory.google_project.main",
            "module.application_project.module.project-factory.module.project_services.google_project_service.project_services",
            "module.management_project.module.project-factory.module.project-factory.google_project.main",
            "module.management_project.module.project-factory.module.project-factory.module.project_services.google_project_service.project_services",
            "module.network.module.vpc.module.vpc.google_compute_network.network",
            "module.nginx_group.google_compute_region_instance_group_manager.mig"
          ]
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "34.107.237.18",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2020-06-29T20:41:14.945-07:00",
            "id": "projects/application-project-a1d0/global/addresses/nginx-group-lb-address",
            "name": "nginx-group-lb-address",
            "prefix_length": 0,
            "project": "application-project-a1d0",
            "self_link": "https://www.googleapis.com/compute/v1/projects/application-project-a1d0/global/addresses/nginx-group-lb-address"
          },
          "dependencies": [
            "module.application_project.module.project-factory.google_project.main",
            "module.application_project.module.project-factory.module.project_services.google_project_service.project_services"
          ]
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "projects/application-project-a1d0/global/forwardingRules/nginx-group-lb",
            "ip_address": "34.107.237.18",
            "ip_protocol": "TCP",
            "load_balancing_scheme": "EXTERNAL",
            "name": "nginx-group-lb",
            "port_range": "80-80",
            "project": "application-project-a1d0",
            "self_link": "https://www.googleapis.com/compute/v1/projects/application-project-a1d0/global/forwardingRules/nginx-group-lb",
            "target": "https://www.googleapis.com/compute/v1/projects/application-project-a1d0/global/targetHttpProxies/nginx-group-lb-http-proxy"
          },
          "dependencies": [
            "module.application_project.module.project-factory.google_project.main",
            "module.application_project.module.project-factory.module.project_services.google_project_service.project_services",
            "module.gce-lb-http.google_compute_backend_service.default",
            "module.gce-lb-http.google_compute_global_address.default",
            "module.gce-lb-http.google_compute_health_check.default",
            "module.gce-lb-http.google_compute_target_http_proxy.default",
            "module.gce-lb-http.google_compute_url_map.default",
            "module.nginx_group.google_compute_region_instance_group_manager.mig"
          ]
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "https",
      "each": "list",
      "provider": "provider.google"
    },
    {
      "module": "module.network.module.vpc.module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/management-project-ee13/global/networks/cf-vpc",
            "name": "cf-vpc",
            "project": "management-project-ee13",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/management-project-ee13/global/networks/cf-vpc"
          },
          "dependencies": [
            "module.management_folder.google_folder.default",
            "module.management_project.module.project-factory.module.project-factory.google_project.main",
            "module.management_project.module.project-factory.module.project-factory.module.project_services.google_project_service.project_services",
            "module.management_project.module.project-factory.module.project-factory.null_resource.preconditions",
            "module.management_project.module.project-factory.module.project-factory.random_id.random_project_id_suffix"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc.module.routes",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route",
      "each": "map",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": "egress-internet",
          "schema_version": 0,
          "attributes": {
            "description": "route access to internet",
            "dest_range": "0.0.0.0/0",
            "id": "projects/management-project-ee13/global/routes/egress-internet",
            "name": "egress-internet",
            "network": "https://www.googleapis.com/compute/v1/projects/management-project-ee13/global/networks/cf-vpc",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/management-project-ee13/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "management-project-ee13",
            "self_link": "https://www.googleapis.com/compute/v1/projects/management-project-ee13/global/routes/egress-internet",
            "tags": [
              "egress-inet"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.management_folder.google_folder.default",
            "module.management_project.module.project-factory.module.project-factory.google_project.main",
            "module.management_project.module.project-factory.module.project-factory.module.project_services.google_project_service.project_services",
            "module.management_project.module.project-factory.module.project-factory.null_resource.preconditions",
            "module.management_project.module.project-factory.module.project-factory.random_id.random_project_id_suffix",
            "module.network.module.vpc.module.subnets.google_compute_subnetwork.subnetwork",
            "module.network.module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc.module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "each": "map",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": "us-central1/cf-vpc-sub1",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-06-29T20:14:46.415-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/management-project-ee13/regions/us-central1/subnetworks/cf-vpc-sub1",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "cf-vpc-sub1",
            "network": "https://www.googleapis.com/compute/v1/projects/management-project-ee13/global/networks/cf-vpc",
            "private_ip_google_access": true,
            "project": "management-project-ee13",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/management-project-ee13/regions/us-central1/subnetworks/cf-vpc-sub1"
          },
          "dependencies": [
            "module.management_folder.google_folder.default",
            "module.management_project.module.project-factory.module.project-factory.google_project.main",
            "module.management_project.module.project-factory.module.project-factory.module.project_services.google_project_service.project_services",
            "module.management_project.module.project-factory.module.project-factory.null_resource.preconditions",
            "module.management_project.module.project-factory.module.project-factory.random_id.random_project_id_suffix",
            "module.network.module.vpc.module.vpc.google_compute_network.network"
          ]
        },
        {
          "index_key": "us-central1/cf-vpc-sub2",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-06-29T20:14:46.405-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/management-project-ee13/regions/us-central1/subnetworks/cf-vpc-sub2",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "cf-vpc-sub2",
            "network": "https://www.googleapis.com/compute/v1/projects/management-project-ee13/global/networks/cf-vpc",
            "private_ip_google_access": true,
            "project": "management-project-ee13",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/management-project-ee13/regions/us-central1/subnetworks/cf-vpc-sub2"
          },
          "dependencies": [
            "module.management_folder.google_folder.default",
            "module.management_project.module.project-factory.module.project-factory.google_project.main",
            "module.management_project.module.project-factory.module.project-factory.module.project_services.google_project_service.project_services",
            "module.management_project.module.project-factory.module.project-factory.null_resource.preconditions",
            "module.management_project.module.project-factory.module.project-factory.random_id.random_project_id_suffix",
            "module.network.module.vpc.module.vpc.google_compute_network.network"
          ]
        },
        {
          "index_key": "us-central1/cf-vpc-sub3",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-06-29T20:14:46.419-07:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/management-project-ee13/regions/us-central1/subnetworks/cf-vpc-sub3",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "cf-vpc-sub3",
            "network": "https://www.googleapis.com/compute/v1/projects/management-project-ee13/global/networks/cf-vpc",
            "private_ip_google_access": true,
            "project": "management-project-ee13",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/management-project-ee13/regions/us-central1/subnetworks/cf-vpc-sub3"
          },
          "dependencies": [
            "module.management_folder.google_folder.default",
            "module.management_project.module.project-factory.module.project-factory.google_project.main",
            "module.management_project.module.project-factory.module.project-factory.module.project_services.google_project_service.project_services",
            "module.management_project.module.project-factory.module.project-factory.null_resource.preconditions",
            "module.management_project.module.project-factory.module.project-factory.random_id.random_project_id_suffix",
            "module.network.module.vpc.module.vpc.google_compute_network.network"
          ]
        },
        {
          "index_key": "us-central1/cf-vpc-sub4",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-06-29T20:14:46.405-07:00",
            "gateway_address": "10.0.3.1",
            "id": "projects/management-project-ee13/regions/us-central1/subnetworks/cf-vpc-sub4",
            "ip_cidr_range": "10.0.3.0/24",
            "name": "cf-vpc-sub4",
            "network": "https://www.googleapis.com/compute/v1/projects/management-project-ee13/global/networks/cf-vpc",
            "private_ip_google_access": true,
            "project": "management-project-ee13",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/management-project-ee13/regions/us-central1/subnetworks/cf-vpc-sub4"
          },
          "dependencies": [
            "module.management_folder.google_folder.default",
            "module.management_project.module.project-factory.module.project-factory.google_project.main",
            "module.management_project.module.project-factory.module.project-factory.module.project_services.google_project_service.project_services",
            "module.management_project.module.project-factory.module.project-factory.null_resource.preconditions",
            "module.management_project.module.project-factory.module.project-factory.random_id.random_project_id_suffix",
            "module.network.module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-06-29T20:41:50.844-07:00",
            "id": "projects/application-project-a1d0/global/targetHttpProxies/nginx-group-lb-http-proxy",
            "name": "nginx-group-lb-http-proxy",
            "project": "application-project-a1d0",
            "proxy_id": 7173900648509278865,
            "self_link": "https://www.googleapis.com/compute/v1/projects/application-project-a1d0/global/targetHttpProxies/nginx-group-lb-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/application-project-a1d0/global/urlMaps/nginx-group-lb-url-map"
          },
          "dependencies": [
            "module.application_project.module.project-factory.google_project.main",
            "module.application_project.module.project-factory.module.project_services.google_project_service.project_services",
            "module.gce-lb-http.google_compute_backend_service.default",
            "module.gce-lb-http.google_compute_health_check.default",
            "module.gce-lb-http.google_compute_url_map.default",
            "module.nginx_group.google_compute_region_instance_group_manager.mig"
          ]
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "default",
      "each": "list",
      "provider": "provider.google"
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-06-29T20:41:38.856-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/application-project-a1d0/global/backendServices/nginx-group-lb-backend-default",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "6JBU32rov5M=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/application-project-a1d0/global/urlMaps/nginx-group-lb-url-map",
            "map_id": 2643971003303529117,
            "name": "nginx-group-lb-url-map",
            "path_matcher": [],
            "project": "application-project-a1d0",
            "self_link": "https://www.googleapis.com/compute/v1/projects/application-project-a1d0/global/urlMaps/nginx-group-lb-url-map",
            "test": [],
            "timeouts": null
          },
          "dependencies": [
            "module.application_project.module.project-factory.google_project.main",
            "module.application_project.module.project-factory.module.project_services.google_project_service.project_services",
            "module.gce-lb-http.google_compute_backend_service.default",
            "module.gce-lb-http.google_compute_health_check.default",
            "module.nginx_group.google_compute_region_instance_group_manager.mig"
          ]
        }
      ]
    }
  ]
}